# jlang-2

./: .gitignore  ExpressionParser.py  JlangObjects.py  README.MD  Statements.py  Tokenizer.py  TypeChecker.py  compile_log.txt  jlang.py  jlanglegacy.tar
jlang-2-cpp/: .clang-format  .gitignore  CMakeLists.txt  Makefile  import.j  main.cpp  test.j
jlang-2-cpp/include/: ExpressionParser.hpp  JlangExceptions.hpp  JlangObjects.hpp  Statements.hpp  Tokenizer.hpp  jlangObjects.h.bak  strhash.hpp
jlang-2-cpp/src/: ExpressionParser.cpp  JlangObjects.cpp  Statements.cpp  Tokenizer.cpp  jlangObjects.cpp.bak
std/: std.j
tests/: barebones.j  conditions.j  constant.j  functions.j  jlangrevise.j  logic.j  loops.j  memory.j  pointers.j  syscall.j  test.j  variables.jlegacy
